...
	}
	
	enum General {
		static let exposureSubmissionNavigationControllerTitle = "ExposureSubmissionNavigationController"
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
		static let defaultButton = "General.defaultButton"
		static let deleteButton = "General.deleteButton"
		static let webView = "HTMLView"
	}
...
		static let title = "UpdateOSScreen.title"
		static let text = "UpdateOSScreen.text"
	}

	enum TabBar {
		static let home = "TabBar.home"
		static let certificates = "TabBar.certificates"
		static let scanner = "TabBar.scanner"
		static let checkin = "TabBar.checkin"
		static let diary = "TabBar.diary"
	}
	
	enum DataDonation {
...
		}
	}

	enum HealthCertificate {

		enum Validation {
			static let countrySelection = "HealthCertificate.Validation.CountrySelection"
			static let dateTimeSelection = "HealthCertificate.Validation.DateTimeSelection"
			enum Info {
				static let imageDescription = "AppStrings.HealthCertificate.Validation.Info.imageDescription"
			}
		}

		enum FamilyMemberConsent {
...
			static let  dataPrivacyTitle = "AccessibilityIdentifiers.HealthCertificate.FamilyMemberConsent.dataPrivacyTitle"
		}

		enum Overview {
			static let changeAdmissionScenarioCell =
				"AppStrings.HealthCertificate.changeAdmissionScenarioCell"
			static let healthCertifiedPersonCell = "AppStrings.HealthCertificate.healthCertifiedPersonCell"
			static let testCertificateRequestCell = "AppStrings.HealthCertificate.testCertificateRequestCell"
			static let emptyState = "AppStrings.HealthCertificate.emptyState"
		}

		enum Info {
			static let imageDescription = "AppStrings.HealthCertificate.Info.imageDescription"
...
		enum ExportCertificatesInfo {
			static let headerImage = "AppStrings.HealthCertificate.ExportCertificatesInfo.headerImage"
		}

		enum Person {
			static let certificateCell = "HealthCertificate.Person.cell"
			static let validationButton = "HealthCertificate.Person.validationButton"
			
			enum UpdateSucceeded {
				static let image = "HealthCertificate.Person.UpdateSucceeded.image"
			}
		}
		
...
